# Holy-bot

./: .dockerignore  .env.dev  .env.example  .gitignore  LICENSE.md  README.md  docker-compose.host.yml  docker-compose.yml  requirements-all.txt  requirements-dev.txt  requirements.txt  test.py  verify_email.py
API/: Dockerfile  __init__.py  __main__.py  requirements.txt
Bot/: kafkaclient.py  requirements.txt
Core/: Dockerfile  README.md  __init__.py  base.py  core.py
EventEngine/: __init__.py
EventHandler/: eventhandler.py
HolyBot/: NOTES.md  README.md  launcher.py  requirements.txt  run_recognizer.py  run_server.py  (+2 more)
Shared/: .dockerignore  Dockerfile  manage.py  pyproject.toml  requirements.txt
Shared/alembic/: env.py
Shared/alembic/versions/: 59a3f2b1d7e2_add_user_id_to_session_and_twitch_token.py  bdcc9bea8fb5_initial_migration.py  c171edeef47e_initial_migration.py
Shared/holybot_shared/SharedProto/google/protobuf/: __init__.py
Shared/holybot_shared/SharedProto/holybot/api/: __init__.py
Shared/holybot_shared/communicator/: client.py  microservice.py  stub.py  stub_generator.py
Shared/holybot_shared/db/: __init__.py  temp_session.py  user.py
Shared/holybot_shared/db/twitch/: __init__.py  channel.py  token.py
Shared/holybot_shared/db_models/: __init__.py  factory.py  user.py
Shared/holybot_shared/logger/: logger.py
Shared/holybot_shared/models/: __init__.py  factory.py  session.py  twitch_token.py  user.py
Shared/logger/: logger.py
Shared/models/: __init__.py  create_tables.py  factory.py
Shared/proto/: api.proto  common.proto
(+197 files in other folders)
