[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "holybot-shared"
version = "0.0.0"
requires-python = ">=3.11"

dependencies = [
  "SQLAlchemy[asyncio]~=2.0.45",
  "pydantic~=2.12.5",
  "psycopg[binary,pool]~=3.3.2",
  "loguru~=0.7.3",
  "valkey[libvalkey]~=6.1.1",
  "orjson~=3.11.5"
]

[tool.setuptools.packages]
find = {where = ["."], include = ["holybot_shared*"], exclude = ["alembic"]}
